data Migration Application (Package for Destination Org)/objects/Data_migration_record_Id__b.object
<CustomObject>
    <fields>
        <fullName>newRecordId__c</fullName>
        <label>newRecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objectName__c</fullName>
        <label>objectName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldRecordid__c</fullName>
        <label>oldRecordid</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>index</fullName>
        <fields>
            <name>oldRecordid__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>index</label>
    </indexes>
    <label>Data migration record Id</label>
    <pluralLabel>Data migration record Ids</pluralLabel>
</CustomObject>